# simple_socket

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  appveyor.bat  appveyor.yml  build.sh  build_arm.sh  simple_socket.sln  travis.sh
api/Poco/Foundation/Poco/: Alignment.h  AtomicCounter.h  Bugcheck.cpp  Debugger.cpp  Foundation.h  UtilsAdd.h
api/Poco/Net/Poco/Net/: IPAddress.cpp  IPAddress.h  IPAddressImpl.cpp  Net.h  SocketAddress.cpp  SocketAddress.h  SocketImpl.cpp  StreamSocket.cpp  StreamSocket.h  StreamSocketImpl.cpp
api/simple_client_socket/: AndroidLog.cpp  AndroidLog.h  CMakeLists.txt  ClientImp.cpp  ClientImp.h  Common.h  Config.h  EventManager.cpp  EventManager.h  Makefile  Makefile_Arm_first  Makefile_Arm_seconed  Makefile_first  Makefile_seconed  cp.sh  make.sh  resource.h  simple_client_socket.vcxproj  simple_client_socket.vcxproj.filters  whsarmclient.cpp  whsarmclient.def  whsarmclient.h  whsarmclient.rc
api/simple_client_socket/android/: INSTALL.txt
api/simple_client_socket/android/jni/: Android.mk  Application.mk  copy.bat  make.bat
api/simple_net/: Client.cpp  Client.h  NetConfig.h  NetEventInterface.h  NetHelper.cpp  NetHelper.h  NetParam.h  NetProtocol.h  Server.cpp  Server.h  ServerManager.cpp  ServerManager.h
api/simple_server_socket/: CMakeLists.txt  Common.h  Config.h  EventManager.cpp  EventManager.h  Makefile  Makefile_seconed  ServerImp.cpp  ServerImp.h  ServerManagerImp.cpp  ServerManagerImp.h  make.sh  resource.h  simple_server_socket.vcxproj  simple_server_socket.vcxproj.filters  whsarmserver.cpp  whsarmserver.def  whsarmserver.h  whsarmserver.rc
cmake/: arm_linux_c98_setup.cmake  arm_linux_setup.cmake
demo/ArmMFCDemoClient/: ArmMFCDemoClient.cpp  ArmMFCDemoClient.h  ArmMFCDemoClient.rc  ArmMFCDemoClient.vcxproj  ArmMFCDemoClientDlg.cpp  ArmMFCDemoClientDlg.h  resource.h  stdafx.cpp
demo/ArmMFCDemoClient/res/: ArmMFCDemoClient.rc2
demo/ArmMFCDemoClient/wrapper/: armclientapi.cpp  armclientapi.h  base64.h  message_.h  utf_gbk.h  utils.h
demo/ArmMFCDemoServer/: ArmMFCDemoServer.cpp  ArmMFCDemoServer.h  ArmMFCDemoServer.rc  ArmMFCDemoServer.vcxproj  ArmMFCDemoServerDlg.cpp  ArmMFCDemoServerDlg.h  resource.h  stdafx.cpp  stdafx.h
demo/ArmMFCDemoServer/res/: Thumbs.db
demo/MFCDemoClient/: JsonTestDataParse.cpp  JsonTestDataParse.h  MFCDemoClient.aps  MFCDemoClient.cpp  MFCDemoClient.h  MFCDemoClient.rc  MFCDemoClient.vcxproj  MFCDemoClientDlg.cpp  MFCDemoClientDlg.h  resource.h  stdafx.cpp
demo/MFCDemoClient/res/: MFCDemoClient.rc2
demo/MFCDemoServer/: JsonTestDataParse.cpp  JsonTestDataParse.h  MFCDemoServer.aps  MFCDemoServer.cpp  MFCDemoServer.h  MFCDemoServer.rc  MFCDemoServer.vcxproj  MFCDemoServerDlg.cpp  MFCDemoServerDlg.h  resource.h  stdafx.cpp
demo/MFCDemoServer/res/: MFCDemoServer.rc2
doc/: Protocal.md  poco_android_make.txt
test/: CMakeLists.txt  UnitTest.cpp  echo_server.cpp  test_client.cpp  test_echo_server.cpp  test_server.cpp
test/UnitTest/: CMakeLists.txt  UnitTest.cpp  UnitTest.sln
test/UnitTest/UnitTest/: CMakeLists.txt  Makefile  UnitTest.cpp  UnitTest.vcxproj
test/echo_server/: Makefile  echo_server.cpp  echo_server.vcxproj
test/test_client/: test_client.cpp  test_client.vcxproj
test/test_echo_server/: Makefile  Makefile_Arm  test_echo_server  test_echo_server.cpp  test_echo_server.vcxproj
test/test_server/: test_server.cpp  test_server.vcxproj
